# remax-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/atari/: Dockerfile  atari_wrapper.py  ppo_q.py  ppo_v.py  reppo.py
agents/craftax/: batch_logging.py  network.py  ppo_q.py  ppo_v.py  reppo.py  wrappers.py
agents/minatar/: ppo_q.py  ppo_v.py  ppo_v_rnd.py  pqn.py  reppo.py
assets/: math.tex
bandit/: plot_bandit_with_posterior.py  plot_bernoulli_bandit_curve.py  plot_binary_bandit.py  plot_binary_bandit_result.py  plot_fixed_binary_bandit.py  plot_scaled_bernoulli_bandit.py  plot_scaled_binary_bandit.py
docs/: math.tex
rl/: ppo_q.py  ppo_v.py  pqn.py  reppo.py  run.sh  speed_benchmak.sh  tune_pqn.sh  tune_reppo.sh
sh/: run_atari.sh  run_craftax.sh  run_minatar.sh
