[project]
name = "remax-rl"
version = "0.1.0"
description = "Emergence of Exploration in Policy Gradient Reinforcement Learning via Retrying"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "chex",
    "flax",
    "distrax",
    "optax",
    "pgx",
    "wandb",
    "pydantic",
    "omegaconf",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "bandit"]

[project.optional-dependencies]
atari = [
  "gym==0.23.1",
  "envpool==0.8.4",
  "gymnax==0.0.5"
]
